--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,8 @@
     --padding-section: var(--padding-between-elements) var(--padding-sides);
     --padding-hero-mob: calc(var(--padding-between-elements) + var(--height-header-mob)) var(--padding-sides) var(--padding-between-elements) var(--padding-sides);
 
+    --transition: width 0.3s ease-in-out, background-color 0.3s ease-in-out;   
+
 
 
 
@@ -112,6 +114,14 @@ ul {
     background-color: var(--afro-yellow);
 }
 
+.bg-light-green {
+    background-color: var(--afro-light-green);
+}
+
+.bg-green {
+    background-color: var(--afro-green);
+}
+
 /* Tipografía */
 
 p {
@@ -161,11 +171,19 @@ h6{
 }
 
 .big-text {
-    font-family: var(--secundary-font);
-    font-size: 60px;
+    font-family: 'Casta-Thin';
+    font-size: 80px;
+    font-weight: lighter;
+    text-align: center;
     text-transform: uppercase;
-    line-height: 0.9em;
+    line-height: 1em;
+    color: var(--afro-yellow);
+    padding-bottom: 40px;
 }
+
+
+
+
 
 .item-menu {
     font-family: var(--main-font); 
@@ -184,7 +202,8 @@ h6{
     background-color: var(--afro-yellow);
     border: var(--border);
     border-radius: 100px;
-    padding: 2px 10px;     
+    padding: 2px 10px;
+    transition: var(--transition);   
 }
 
 .btn:hover {
@@ -245,6 +264,7 @@ header div {
     top: 0px;
     right: 0px;
     z-index: 1000;
+
  
 
     /*flex*/
@@ -267,7 +287,7 @@ header div img {
     font-size: 20px;
     padding: 12px;
     border-left: var(--border);
-    transition: 2ms;
+    transition: width 0.5s ease-in-out, background-color 0.5s ease-in-out;
 }
 
 .btn-menu:hover {
@@ -330,11 +350,13 @@ footer p {
     width: 50px;
     padding: 0px;
     margin-left: 10px; 
+    transition: var(--transition);
 }
 
 .rrss img:hover {
     border: var(--border);
     box-shadow: 6px 6px 6px 6px rgba(0, 0, 0, 0.10) inset;
+    border-radius: 100%;
 }
 
 .rrss p {
@@ -342,8 +364,6 @@ footer p {
 }
 
 /* Fin Footer */
-
-
 
 /* Hero */
 
@@ -404,13 +424,84 @@ footer p {
 
 .section-black {
     color: var(--afro-yellow); 
-    padding: var(--padding-section);
+    padding: var(--padding-section); 
 }
 
 .section-black h2, .section-black div {
     padding-bottom: 4%;
 }
 
+/* Sección fondo negro */
+
+.section-big-text {
+    padding: var(--padding-section);
+    text-align: center;
+}
+
+/* Sección Cards */
+
+.cards {
+    /*flex*/
+    display: flex;
+}
+
+.card {
+    width: 50%;
+    border: var(--border); 
+    padding: 2%;
+
+    /*flex*/
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.card div:first-child {
+    width: 100%;
+
+    /*flex*/
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card span {
+    font-family: var(--main-font);
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.card div:first-child span:first-child {
+    padding: 1%; 
+    border: var(--border);    
+}
+
+.card div:first-child span:last-child i {
+    color: var(--afro-purple);
+    padding-left: 4px;   
+}
+
+.card img {
+    width: 100%;
+    border: var(--border);
+    margin: 10px 0px;  
+}
+
+
+.card img:last-child {
+    width: 30px;
+    margin: 0px; 
+    padding: 2px;
+    text-align: end; 
+}
+
+.card img:last-child:hover {
+    background-color: var(--afro-yellow);  
+}
+
+.card p {
+    font-size: 14px;
+}
 
 
 
@@ -456,8 +547,7 @@ footer p {
     }
 
     .big-text {
-        font-size: 100px;
-  
+        font-size: 150px;
     }
 
     .item-menu {
@@ -488,6 +578,7 @@ footer p {
             right: 0px;
             margin: auto; 
             z-index: 2000; 
+            
         
             /*flex*/
             display: flex;
@@ -496,8 +587,7 @@ footer p {
         }
         
         .btn-menu {
-            font-size: 36px;
-            
+            font-size: 36px;    
         }
 
     /* Fin Header Desk */
@@ -613,9 +703,10 @@ footer p {
         flex-wrap: wrap;
     }
 
-    /* Sección fondo negro - Desk */
+    /* Sección Fondo Negro - Desk */
    .section-black {
         padding: 0px; 
+        height: 100vh;
         /*flex*/
         display: flex;
         align-items: flex-end;
@@ -624,6 +715,30 @@ footer p {
     .section-black div {
         padding: var(--padding-section);
         width: 50%;
+    }
+
+    .section-big-text {
+        height: 100vh;
+    }
+
+    /* Sección Cards - Desk */
+
+    .card span {
+        font-size: 20px;
+    }
+
+    .card img {
+        margin: 20px 0px;  
+    }
+
+
+    .card img:last-child {
+        width: 60px;
+        padding: 4px;
+    }
+
+    .card p {
+        font-size: 20px;
     }
 
 
