--- a/css/styles.css
+++ b/css/styles.css
@@ -472,6 +472,9 @@ footer p {
     background-color: transparent;
     border-bottom: var(--border);
     border-right: 0px;
+    border-left: 0px;
+    border-top: 0px;
+    border-radius: 0px;
     width: 100%;
     color: var(--afro-black);
 }
