--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,8 @@
     --afro-red: #D93100;
     --afro-light-red: #DD6144;
     --afro-purple: #BC1A8F; 
-    --afro-light-purple: #BB7FB4; 
+   /*  --afro-light-purple: #BB7FB4;  */
+   --afro-light-purple: #d8a8d2; 
     --afro-green: #89FC59; 
     --afro-light-green: #A7D992;
 
@@ -57,7 +58,7 @@
 
 
     /* Bordes */
-    --border: 2px solid var(--afro-black);
+    --border: 1.5px solid var(--afro-black);
 
     /* Tipografía */
     --main-font: 'Franklin-Gothic-Heavy', 'Arial Narrow', Arial, sans-serif;
@@ -76,23 +77,36 @@
     margin: 0px;
     font-family: var(--text-font);
     box-sizing: border-box;
-    /* outline: 2px dashed purple; */
+   /*  outline: 2px dashed purple; */
 }
 
 body {
     background-color: var(--afro-black);
     max-width: 100%; 
     overflow-x: hidden;
+    /* Prueba */
+    transition: background-color 1s ease;
 }
 
 a {
+    font-family: var(--text-font);
+    color: var(--afro-black);
     text-decoration: none;
     cursor: url("../img/pointer.png"), pointer;
+    transition: 0.5s;
 }
+
+a:hover {
+    font-weight: bolder;
+}
+
+
 
 ul {
     list-style: none;
 }
+
+
 
 /* Background color */
 .bg-red {
@@ -124,25 +138,26 @@ ul {
 }
 
 .bg-img-1 {
-    background-image: url(../img/conciencia-afro-quienes-somos-2.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url(../img/escenario-festival-conciencia-afro.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .bg-img-2 {
-    background-image: url(../img/conciencia-afro-quienes-somos-3.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url(../img/afrozumba-espacio-afro.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .bg-img-3 {
-    background-image: url(../img/festival-conciencia-afro-2019.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url(../img/residencia-espacio-afro.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .bg-img-4 {
-    background-image: url(../img/festival-conciencia-afro-2022-6.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url(../img/contacto-conciencia-afro.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -157,6 +172,8 @@ p, li {
 }
 
 
+
+
 h1 {
     font-family: var(--main-font);
     font-size: 1.8em; 
@@ -169,6 +186,8 @@ h2 {
     font-size: 1.6em;
     text-transform: uppercase;
     line-height: 1em;
+    font-weight: lighter;
+    letter-spacing: 0.01em;
 }
 
 h3 {
@@ -181,6 +200,7 @@ h4 {
     font-size: 1.4em; 
     text-transform: uppercase;
     padding-bottom: 4%;
+
 }
 
 h5 {
@@ -225,7 +245,9 @@ h6{
     border: var(--border);
     border-radius: 100px;
     padding: 2px 10px;
-    transition: var(--transition);   
+    transition: var(--transition);
+    /* Para que todos los botones sean clicables y no haya conflicto de capas */
+    z-index: 4000; 
 }
 
 .btn:hover {
@@ -644,6 +666,13 @@ footer p {
 .section-big-text {
     padding: var(--padding-section);
     text-align: center;
+
+    /*flex*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    
 }
 
 /* Sección Cards */
@@ -651,6 +680,7 @@ footer p {
 .cards {
     /*flex*/
     display: flex;
+    flex-wrap: wrap; 
 }
 
 .card {
@@ -667,6 +697,7 @@ footer p {
 
 .card div:first-child {
     width: 100%;
+    padding-bottom: 10px;
 
     /*flex*/
     display: flex;
@@ -677,7 +708,7 @@ footer p {
 .card span {
     font-family: var(--main-font);
     font-size: 12px;
-    text-transform: uppercase;
+    text-transform: uppercase; 
 }
 
 .card div:first-child span:first-child {
@@ -712,6 +743,128 @@ footer p {
     font-size: 14px;
 }
 
+/* Titular sección  */
+
+.titular-section {
+    color: var(--afro-yellow);
+    text-align: center;
+    width: 100%;
+
+    padding: var(--padding-section);
+    padding-bottom: 2%;
+}
+
+.titular-section h3 {
+    padding-bottom: 0px;
+}
+
+/* Ayuda Section */
+
+.fixed-section {
+    min-height: 90vh;
+    position: fixed;
+    top: 2%;
+    right: 2%;
+    left: 2%;
+    bottom: 2%;
+    z-index: 1000;
+
+    /*flex*/
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.fixed-section div {
+    width: 100%;
+
+    /*flex*/
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.fixed-section p {
+    display: block; 
+    width: 30%;
+    
+}
+
+.text-right{
+    text-align: right;
+}
+
+.panel {
+    min-height: 100vh;
+
+    /* Flex */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.panel h2 {
+    display: block; 
+    width: 60%;
+    text-align: center;
+}
+
+.card-ayuda {
+    border: var(--border);
+    height: 100%;
+    width: 50%;
+
+    /*flex*/
+    display: flex;
+    justify-content: flex-start;
+    align-items: space-between;
+}
+
+
+.card-ayuda > div {
+    padding: 2%;
+    width: 100%;
+    border-left: var(--border);
+    /*flex*/
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.titulo-precio{
+
+    /*flex*/
+    display: flex;
+    align-items: flex-end;
+}
+
+.titulo-precio h4 {
+    display: block;
+    width: 80%;
+    padding-bottom: 0;
+}
+
+.titulo-precio span {
+    display: block;
+    width: 20%;
+    font-family: var(--secundary-font);
+    font-size: 4em;
+    text-align: right;
+}
+
+
+
+
+
+
+
+
+
+  
+
 
 
 /* Responsive */
@@ -719,13 +872,14 @@ footer p {
 
     /* 1280px */
 
-    /* Tipografía */
+    /* Tipografía - Desk*/
 
-    p, li, ul {
-        font-size: 20px;
+    p, li {
+        font-size: 1.5em;
         line-height: 1.4em; 
     }
 
+    
 
     h1 {
         font-size: 46px; 
@@ -944,6 +1098,11 @@ footer p {
 
     .section-big-text {
         height: 100vh;
+    }
+
+    .section-black img { 
+        width: 60%;
+        
     }
 
     /* Sección Cards - Desk */
