--- a/css/styles.css
+++ b/css/styles.css
@@ -967,27 +967,27 @@ footer p {
     
 
     h1 {
-        font-size: 46px; 
+        font-size: 2.8vw; 
     }
 
     h2 {
-        font-size: 2em;
+        font-size: 3vw;
     }
 
     h3 {
-        font-size: 50px;
+        font-size: 2.5vw;
     }
 
     h4 {
-        font-size: 30px; 
+        font-size: 1.8vw; 
     }
 
     h5 {
-        font-size: 32px;
+        font-size: 1.6vw;
     } 
 
     h6{
-        font-size: 20px; 
+        font-size: 1vw; 
     }
 
     .big-text {
